fixes boss clipping issue

--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,10 @@ body{
   border-radius: 0;
 }
 
+#Demon_0{
+  border-radius: 0;
+}
+
 .monster:hover{
   filter: brightness(1.5);  
 }
